@@ -7,7 +7,7 @@ import st.redline.ProtoObject;
 public class ClassSubclassMethod extends ProtoMethod {
 
 	public ProtoObject applyTo(ProtoObject receiver, ProtoObject classMethodWasFoundIn, ProtoObject argument) {
-//		System.out.println("ClassSubclassMethod() " + receiver + " " + String.valueOf(argument.javaValue()));
+		System.out.println("ClassSubclassMethod() " + receiver + " " + String.valueOf(argument.javaValue()));
 		String name = fullyQualifiedClassName(String.valueOf(argument.javaValue()));
 		ProtoObject subclass = ProtoObject.primitiveCreateSubclass(receiver, name);
 		ProtoObject.primitiveRegisterAs(subclass, name);
