@@ -1,0 +1,7 @@
+
+Object subclass: #MyClass
+       instanceVariableNames: ''
+       classVariableNames: ''
+       classInstanceVariableNames: ''
+       poolDictionaries: ''
+       category: ''.
